# 2023_ME491

./: .gitignore  CMakeLists.txt  ME491_2023_project_conda.yaml  PROJECT_RULE.md  README.md  setup.py
ME491_2023_project/algo/ppo/: ppo.py  storage.py
ME491_2023_project/env/: BasicEigenTypes.hpp  RaisimGymVecEnv_for_test.py  VectorizedEnvironment.hpp  VectorizedEnvironment_for_test.hpp  debug_app.cpp  raisim_gym.cpp  raisim_gym_for_test.cpp
ME491_2023_project/env/envs/rsg_anymal/: AnymalController_00000000.hpp  AnymalController_for_test.hpp  Environment.hpp  Environment_for_test.hpp  cfg.yaml  runner.py  tester.py
ME491_2023_project/helper/: raisim_gym_helper.py
helper/: helper.cmake
rsc/anymal/urdf/: anymal_blue.urdf  anymal_red.urdf
src/: main.cpp  student_id.hpp
